- Fixed conversion of GPS time to local time.
- Added Setup menu with configurable time zone.
- Fixed the function displayChannelInfo.
- Better distinction between cable and terrestrial channels.


2007-12-28: Version 0.1.0

- Added ATSC channel scanner.
- Renamed source files.
- Fixed types for 64 bit systems.
- cATSCFilter is now a singleton.
- cATSCFilter is now properly detached when object is destroyed.
- Version numbers of MGTs are now stored, to prevent unnecessary updating.
- Replaced DEBUG_MSG with the more flexible dprint.
- Now displaying channel frequency in displayChannelInfo.
- Better EIT/ETT handling, each event is only processed once.
- EITs and ETTs are now only parsed when we are sure we need the data.
- Cleaned-up pointer arithmetic in table parsing routines.
- Code style of huffman.cpp/h is now consistent with the other files.
- Always using get_u32, get_u24 and get_u16 where applicable.
- Fixed CRC 32 check of PSIP tables.
- Fixed a memory leak in destructor of GenreDescriptor
  

2008-02-22: Version 0.1.1

- Rewrote cATSCScanner::UpdateLastLine (was unnecessarily complicated).
- ServiceLocationDescriptor now uses a dynamically allocated array to store
  streams, instead of a std::vector.
- MGT tables is now an array instead of a std::vector. 
- Renamed most functions.
- cATSCFilter::Process was too long, new functions have been introduced to
  process the different tables.
- Fixed spelling in cATSCScanner.
- Tables, Channels, Streams and Events are now always passed by reference. 
  

2009-01-26: Version 0.2.0

- Fixed: same event were added multiple times, not updated.
- Fixed malformed patch.
- Added new patch for VDR 1.7.2 and above.
- Minor fixes for VDR 1.7.x.
- Fixed setup menu.
- Fixed compile error with GCC 4.3.1.
- Added missing #include in structs.cpp
- Now calling cPlugin::ConfigDirectory() in thread-safe way.
- Updated license information.
- Added missing virtual to cATSCScanner's destructor
  